<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.task.ynab.models.BudgetsListResponseModel.Data.Budget.Account" />
        <variable
            name="listener"
            type="com.task.ynab.budgetslist.BudgetsListAdapter.ComponentActionsClickListener"/>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/component_cardview"
            style="@style/Base.CardView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="@{v->listener.onAccountClicked(v,data)}">


                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="5dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/account_name"
                    android:text="@{data.name}"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/account_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="20dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/account_type"
                    android:text="@{data.type}"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/account_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/account_type"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/account_balance"
                    android:text="@{Double.toString(data.balance)}"
                    android:gravity="center"/>
                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                  android:layout_margin="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/gray_light"/>
            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
