<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="budget"
            type="com.task.ynab.models.BudgetsListResponseModel.Data.Budget" />

        <variable
            name="account"
            type="com.task.ynab.models.BudgetsListResponseModel.Data.Budget.Account" />

        <variable
            name="listener"
            type="com.task.ynab.budgetslist.BudgetsListAdapter.ComponentActionsClickListener"/>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/component_cardview"
            style="@style/Base.CardView"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="@{v->listener.onItemClicked(v,budget)}">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--This is a ConstraintLayout for the fixed portion
                        of the CardView. The elements
                        that lie within the fixed portion of the CardView
                        can be constrained to this layout.-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/category_fixed_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:elevation="10dp"
                        android:background="@drawable/dummybg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/budget_name"
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:background="@drawable/parallelgoram_shape"
                            android:layout_marginBottom="20dp"
                            android:layout_marginStart="5dp"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@{budget.name}"
                            tools:text="@string/budget_label"
                            android:gravity="center"/>
                        <!--This is ImageButton for the expansion icon.-->
                        <ImageButton
                            android:id="@+id/category_arrow_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:src="@drawable/ic_exband_less"
                            android:onClick="@{v->listener.onItemClicked(v,budget)}"
                            app:layout_constraintBottom_toBottomOf="@id/category_fixed_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/category_fixed_layout" />

                        <TextView
                            android:id="@+id/total_inflows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/budget_name"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="5dp"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@{budget.name}"
                            tools:text="@string/budget_label"
                            android:gravity="center"/>
                  <!--      <TextView
                            android:id="@+id/budget_total_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/total_inflows"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="5dp"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@{Integer.toString(budget.totalAccounts)}"
                            android:gravity="center"/>-->
                        <TextView
                            android:id="@+id/lastmodified_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/total_inflows"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@string/last_modified"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/lastmodified_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@id/lastmodified_label"
                            app:layout_constraintTop_toBottomOf="@id/total_inflows"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:text="@{budget.lastModifiedOn}"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/see_morelabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/lastmodified_label"
                            android:padding="8dp"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:onClick="@{v->listener.onSeeMoreClicked(v,budget)}"

                            android:text="@string/budget_details"
                            android:gravity="center"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--The following is the expandable portion whose
                        visibility is initially set to 'gone'.
                        The parent LinearLayout contains 3 child LinearLayouts
                        that hold a subject name and an icon each.-->
                    <RelativeLayout
                        android:id="@+id/category_hidden_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:visibility="visible"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/category_fixed_layout">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/categoryRecycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            app:fastScrollEnabled="false"
                            android:paddingStart="10dp"
                            android:paddingEnd="0dp"
                            android:background="@color/white"
                            items="@{budget.accounts}"
                            android:visibility="@{budget.visiable ? View.VISIBLE : View.GONE}"
                            tools:listitem="@layout/account_list_item" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
